--- a/tinyhouse_v1/server/package.json
+++ b/tinyhouse_v1/server/package.json
@@ -2,9 +2,11 @@
     "name": "tinyhouse-v1-server",
     "version": "0.1.0",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.11",
         "@types/node": "^14.14.31",
         "@typescript-eslint/eslint-plugin": "^4.16.1",
