--- a/tinyhouse_v1/server/package.json
+++ b/tinyhouse_v1/server/package.json
@@ -6,16 +6,20 @@
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "graphql": "^15.5.0",
+        "lodash.merge": "^4.6.2",
         "mongodb": "^3.6.4"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.0",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.11",
         "@types/graphql": "^14.5.0",
+        "@types/lodash.merge": "^4.6.6",
         "@types/mongodb": "^3.6.9",
         "@types/node": "^14.14.31",
         "@typescript-eslint/eslint-plugin": "^4.16.1",
         "@typescript-eslint/parser": "^4.16.1",
+        "dotenv": "^8.2.0",
         "eslint": "^7.21.0",
         "nodemon": "^2.0.7",
         "ts-node": "^9.1.1",
@@ -23,6 +27,7 @@
     },
     "scripts": {
         "start": "nodemon src/index.ts",
-        "build": "tsc -p ./"
+        "build": "tsc -p ./",
+        "seed": "ts-node temp/seed.ts"
     }
 }
